@@ -50,7 +50,7 @@ int main()
   dolfin_set("tolerance", 0.1);
   dolfin_set("initial time step", 1e-2);
   dolfin_set("maximum time step", 1e-2);
-  dolfin_set("fixed time step", true);
+  //dolfin_set("fixed time step", true);
   dolfin_set("partitioning threshold", 1.0);
   dolfin_set("interval threshold", 0.9);
   dolfin_set("number of samples", 100);
