@@ -76,6 +76,8 @@ real TimeSlab::updateElements(FixedPointIteration& fixpoint)
 {
   real dmax = 0.0;
 
+  cout << "Iteration over elements" << endl;
+
   // Update elements
   for (unsigned int i = 0; i < elements.size(); i++)
   {
@@ -86,6 +88,8 @@ real TimeSlab::updateElements(FixedPointIteration& fixpoint)
     // Update element
     dmax = std::max(dmax, fixpoint.update(*element));
   }
+
+  cout << "Done with all elements" << endl;
   
   return dmax;
 }
@@ -102,8 +106,6 @@ void TimeSlab::resetElements(Solution& u)
     // Get initial value for element
     real u0 = u(element->index(), element->starttime());
     
-    cout << "  Resetting component " << element->index() << " to initial value: " << u0 << endl;
-
     // Reset element
     element->reset(u0);
   }
@@ -123,7 +125,8 @@ real TimeSlab::computeMaxRdElements(Solution& u, RHS& f)
     // Compute discrete residual
     maxrd = std::max(maxrd, fabs(element->computeDiscreteResidual(f)));
     
-    cout << "  r[" << element->index() << "] = " << fabs(element->computeDiscreteResidual(f)) << endl;
+    //cout << "  r[" << element->index() << "] = "
+    //	   << fabs(element->computeDiscreteResidual(f)) << endl;
 
   }
 
